src/c_api.h

typedef void * rwkvmobile_runtime_t;
typedef void * rwkvmobile_server_t;
struct rwkvmobile_server_config {
    const char * host;
    int port;
    int threads;
    const char * model_name;
    int default_max_tokens;
    float temperature;
    int top_k;
    float top_p;
    float presence_penalty;
    float frequency_penalty;
    float penalty_decay;
    int has_temperature;
    int has_top_k;
    int has_top_p;
    int has_presence_penalty;
    int has_frequency_penalty;
    int has_penalty_decay;
};
int rwkvmobile_runtime_get_available_backend_names(char * backend_names_buffer, int buffer_size);
rwkvmobile_runtime_t rwkvmobile_runtime_init();
int rwkvmobile_runtime_release(rwkvmobile_runtime_t runtime);
struct rwkvmobile_server_config rwkvmobile_server_config_default();
rwkvmobile_server_t rwkvmobile_server_start(rwkvmobile_runtime_t runtime, int model_id, const struct rwkvmobile_server_config * config);
int rwkvmobile_server_stop(rwkvmobile_server_t server);
int rwkvmobile_server_wait(rwkvmobile_server_t server);
int rwkvmobile_server_release(rwkvmobile_server_t server);
int rwkvmobile_runtime_load_model(rwkvmobile_runtime_t runtime, const char * model_path, const char * backend_name, const char * tokenizer_path);
int rwkvmobile_runtime_load_model_with_extra(rwkvmobile_runtime_t runtime, const char * model_path, const char * backend_name, const char * tokenizer_path, void * extra);
int rwkvmobile_runtime_load_model_async(rwkvmobile_runtime_t runtime, const char * model_path, const char * backend_name, const char * tokenizer_path);
int rwkvmobile_runtime_load_model_with_extra_async(rwkvmobile_runtime_t runtime, const char * model_path, const char * backend_name, const char * tokenizer_path, void * extra);
int rwkvmobile_runtime_is_loading_model(rwkvmobile_runtime_t runtime);
void rwkvmobile_runtime_get_load_model_status(rwkvmobile_runtime_t runtime, int * result_code, int * model_id);
float rwkvmobile_runtime_get_load_model_progress(rwkvmobile_runtime_t runtime);
int rwkvmobile_runtime_release_model(rwkvmobile_runtime_t runtime, int model_id);
int rwkvmobile_runtime_eval_logits(rwkvmobile_runtime_t runtime, int model_id, const int *ids, int ids_len, float * logits, int logits_len);
int rwkvmobile_runtime_eval_chat_with_history_async(rwkvmobile_runtime_t handle, int model_id, const char ** inputs,
    const int num_inputs, const int max_tokens, void (*callback)(const char *, const int, const char *),
    int enable_reasoning, int force_reasoning, int force_lang, int add_generation_prompt
);
int rwkvmobile_runtime_stop_generation(rwkvmobile_runtime_t runtime, int model_id);
int rwkvmobile_runtime_is_generating(rwkvmobile_runtime_t runtime, int model_id);
int rwkvmobile_runtime_gen_completion_async(rwkvmobile_runtime_t runtime, int model_id, const char * prompt, const int max_tokens, const int stop_code, void (*callback)(const char *, const int, const char *), int disable_cache);
int rwkvmobile_runtime_gen_completion_batch_async(rwkvmobile_runtime_t runtime, int model_id, const char ** prompts, const int batch_size, const int max_tokens, const int stop_code, void (*callback_batch)(const int, const char **, const int*, const char **), int disable_cache);
int rwkvmobile_runtime_eval_chat_batch_with_history_async(rwkvmobile_runtime_t handle, int model_id, const char *** inputs, const int * num_inputs,
    const int batch_size, const int max_tokens, void (*callback_batch)(const int, const char **, const int*, const char **),
    int enable_reasoning, int force_reasoning, int force_lang, int add_generation_prompt
);
int rwkvmobile_runtime_gen_completion(rwkvmobile_runtime_t runtime, int model_id, const char * prompt, const int max_tokens, const int stop_code, void (*callback)(const char *, const int, const char *), int disable_cache);