examples/flutter/ffigen/rwkv_mobile.dart

// AUTO GENERATED FILE, DO NOT EDIT.
// 
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;
/// rwkv_mobile c_api.h in dart
class rwkv_mobile{
/// Holds the symbol lookup function.
final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) _lookup;

/// The symbols are looked up in [dynamicLibrary].
rwkv_mobile(ffi.DynamicLibrary dynamicLibrary): _lookup = dynamicLibrary.lookup;

/// The symbols are looked up with [lookup].
rwkv_mobile.fromLookup(ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup): _lookup = lookup;

int rwkvmobile_runtime_get_available_backend_names(ffi.Pointer<ffi.Char> backend_names_buffer,
int buffer_size,
) {
  return _rwkvmobile_runtime_get_available_backend_names(backend_names_buffer,
buffer_size,
);
}

late final _rwkvmobile_runtime_get_available_backend_namesPtr = _lookup<
    ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Char> , ffi.Int )>>('rwkvmobile_runtime_get_available_backend_names');
late final _rwkvmobile_runtime_get_available_backend_names = _rwkvmobile_runtime_get_available_backend_namesPtr.asFunction<int Function(ffi.Pointer<ffi.Char> , int )>();

rwkvmobile_runtime_t rwkvmobile_runtime_init() {
  return _rwkvmobile_runtime_init();
}

late final _rwkvmobile_runtime_initPtr = _lookup<
    ffi.NativeFunction<rwkvmobile_runtime_t Function()>>('rwkvmobile_runtime_init');
late final _rwkvmobile_runtime_init = _rwkvmobile_runtime_initPtr.asFunction<rwkvmobile_runtime_t Function()>();

int rwkvmobile_runtime_release(rwkvmobile_runtime_t runtime,
) {
  return _rwkvmobile_runtime_release(runtime,
);
}

late final _rwkvmobile_runtime_releasePtr = _lookup<
    ffi.NativeFunction<ffi.Int Function(rwkvmobile_runtime_t )>>('rwkvmobile_runtime_release');
late final _rwkvmobile_runtime_release = _rwkvmobile_runtime_releasePtr.asFunction<int Function(rwkvmobile_runtime_t )>();

rwkvmobile_server_config rwkvmobile_server_config_default() {
  return _rwkvmobile_server_config_default();
}

late final _rwkvmobile_server_config_defaultPtr = _lookup<
    ffi.NativeFunction<rwkvmobile_server_config Function()>>('rwkvmobile_server_config_default');
late final _rwkvmobile_server_config_default = _rwkvmobile_server_config_defaultPtr.asFunction<rwkvmobile_server_config Function()>();

rwkvmobile_server_t rwkvmobile_server_start(rwkvmobile_runtime_t runtime,
int model_id,
ffi.Pointer<rwkvmobile_server_config> config,
) {
  return _rwkvmobile_server_start(runtime,
model_id,
config,
);
}

late final _rwkvmobile_server_startPtr = _lookup<
    ffi.NativeFunction<rwkvmobile_server_t Function(rwkvmobile_runtime_t , ffi.Int , ffi.Pointer<rwkvmobile_server_config> )>>('rwkvmobile_server_start');
late final _rwkvmobile_server_start = _rwkvmobile_server_startPtr.asFunction<rwkvmobile_server_t Function(rwkvmobile_runtime_t , int , ffi.Pointer<rwkvmobile_server_config> )>();

int rwkvmobile_server_stop(rwkvmobile_server_t server,
) {
  return _rwkvmobile_server_stop(server,
);
}

late final _rwkvmobile_server_stopPtr = _lookup<
    ffi.NativeFunction<ffi.Int Function(rwkvmobile_server_t )>>('rwkvmobile_server_stop');
late final _rwkvmobile_server_stop = _rwkvmobile_server_stopPtr.asFunction<int Function(rwkvmobile_server_t )>();

int rwkvmobile_server_wait(rwkvmobile_server_t server,
) {
  return _rwkvmobile_server_wait(server,
);
}

late final _rwkvmobile_server_waitPtr = _lookup<
    ffi.NativeFunction<ffi.Int Function(rwkvmobile_server_t )>>('rwkvmobile_server_wait');
late final _rwkvmobile_server_wait = _rwkvmobile_server_waitPtr.asFunction<int Function(rwkvmobile_server_t )>();

int rwkvmobile_server_release(rwkvmobile_server_t server,
) {
  return _rwkvmobile_server_release(server,
);
}

late final _rwkvmobile_server_releasePtr = _lookup<
    ffi.NativeFunction<ffi.Int Function(rwkvmobile_server_t )>>('rwkvmobile_server_release');
late final _rwkvmobile_server_release = _rwkvmobile_server_releasePtr.asFunction<int Function(rwkvmobile_server_t )>();

int rwkvmobile_runtime_load_model(rwkvmobile_runtime_t runtime,
ffi.Pointer<ffi.Char> model_path,
ffi.Pointer<ffi.Char> backend_name,
ffi.Pointer<ffi.Char> tokenizer_path,
) {
  return _rwkvmobile_runtime_load_model(runtime,
model_path,
backend_name,
tokenizer_path,
);
}

late final _rwkvmobile_runtime_load_modelPtr = _lookup<
    ffi.NativeFunction<ffi.Int Function(rwkvmobile_runtime_t , ffi.Pointer<ffi.Char> , ffi.Pointer<ffi.Char> , ffi.Pointer<ffi.Char> )>>('rwkvmobile_runtime_load_model');
late final _rwkvmobile_runtime_load_model = _rwkvmobile_runtime_load_modelPtr.asFunction<int Function(rwkvmobile_runtime_t , ffi.Pointer<ffi.Char> , ffi.Pointer<ffi.Char> , ffi.Pointer<ffi.Char> )>();

int rwkvmobile_runtime_load_model_with_extra(rwkvmobile_runtime_t runtime,
ffi.Pointer<ffi.Char> model_path,
ffi.Pointer<ffi.Char> backend_name,
ffi.Pointer<ffi.Char> tokenizer_path,
ffi.Pointer<ffi.Void> extra,
) {
  return _rwkvmobile_runtime_load_model_with_extra(runtime,
model_path,
backend_name,
tokenizer_path,
extra,
);
}

late final _rwkvmobile_runtime_load_model_with_extraPtr = _lookup<
    ffi.NativeFunction<ffi.Int Function(rwkvmobile_runtime_t , ffi.Pointer<ffi.Char> , ffi.Pointer<ffi.Char> , ffi.Pointer<ffi.Char> , ffi.Pointer<ffi.Void> )>>('rwkvmobile_runtime_load_model_with_extra');
late final _rwkvmobile_runtime_load_model_with_extra = _rwkvmobile_runtime_load_model_with_extraPtr.asFunction<int Function(rwkvmobile_runtime_t , ffi.Pointer<ffi.Char> , ffi.Pointer<ffi.Char> , ffi.Pointer<ffi.Char> , ffi.Pointer<ffi.Void> )>();

int rwkvmobile_runtime_load_model_async(rwkvmobile_runtime_t runtime,
ffi.Pointer<ffi.Char> model_path,
ffi.Pointer<ffi.Char> backend_name,
ffi.Pointer<ffi.Char> tokenizer_path,
) {
  return _rwkvmobile_runtime_load_model_async(runtime,
model_path,
backend_name,
tokenizer_path,
);
}

late final _rwkvmobile_runtime_load_model_asyncPtr = _lookup<
    ffi.NativeFunction<ffi.Int Function(rwkvmobile_runtime_t , ffi.Pointer<ffi.Char> , ffi.Pointer<ffi.Char> , ffi.Pointer<ffi.Char> )>>('rwkvmobile_runtime_load_model_async');
late final _rwkvmobile_runtime_load_model_async = _rwkvmobile_runtime_load_model_asyncPtr.asFunction<int Function(rwkvmobile_runtime_t , ffi.Pointer<ffi.Char> , ffi.Pointer<ffi.Char> , ffi.Pointer<ffi.Char> )>();

int rwkvmobile_runtime_load_model_with_extra_async(rwkvmobile_runtime_t runtime,
ffi.Pointer<ffi.Char> model_path,
ffi.Pointer<ffi.Char> backend_name,
ffi.Pointer<ffi.Char> tokenizer_path,
ffi.Pointer<ffi.Void> extra,
) {
  return _rwkvmobile_runtime_load_model_with_extra_async(runtime,
model_path,
backend_name,
tokenizer_path,
extra,
);
}

late final _rwkvmobile_runtime_load_model_with_extra_asyncPtr = _lookup<
    ffi.NativeFunction<ffi.Int Function(rwkvmobile_runtime_t , ffi.Pointer<ffi.Char> , ffi.Pointer<ffi.Char> , ffi.Pointer<ffi.Char> , ffi.Pointer<ffi.Void> )>>('rwkvmobile_runtime_load_model_with_extra_async');
late final _rwkvmobile_runtime_load_model_with_extra_async = _rwkvmobile_runtime_load_model_with_extra_asyncPtr.asFunction<int Function(rwkvmobile_runtime_t , ffi.Pointer<ffi.Char> , ffi.Pointer<ffi.Char> , ffi.Pointer<ffi.Char> , ffi.Pointer<ffi.Void> )>();

int rwkvmobile_runtime_is_loading_model(rwkvmobile_runtime_t runtime,
) {
  return _rwkvmobile_runtime_is_loading_model(runtime,
);
}

late final _rwkvmobile_runtime_is_loading_modelPtr = _lookup<
    ffi.NativeFunction<ffi.Int Function(rwkvmobile_runtime_t )>>('rwkvmobile_runtime_is_loading_model');
late final _rwkvmobile_runtime_is_loading_model = _rwkvmobile_runtime_is_loading_modelPtr.asFunction<int Function(rwkvmobile_runtime_t )>();

void rwkvmobile_runtime_get_load_model_status(rwkvmobile_runtime_t runtime,
ffi.Pointer<ffi.Int> result_code,
ffi.Pointer<ffi.Int> model_id,
) {
  return _rwkvmobile_runtime_get_load_model_status(runtime,
result_code,
model_id,
);
}

late final _rwkvmobile_runtime_get_load_model_statusPtr = _lookup<
    ffi.NativeFunction<ffi.Void Function(rwkvmobile_runtime_t , ffi.Pointer<ffi.Int> , ffi.Pointer<ffi.Int> )>>('rwkvmobile_runtime_get_load_model_status');
late final _rwkvmobile_runtime_get_load_model_status = _rwkvmobile_runtime_get_load_model_statusPtr.asFunction<void Function(rwkvmobile_runtime_t , ffi.Pointer<ffi.Int> , ffi.Pointer<ffi.Int> )>();

double rwkvmobile_runtime_get_load_model_progress(rwkvmobile_runtime_t runtime,
) {
  return _rwkvmobile_runtime_get_load_model_progress(runtime,
);
}

late final _rwkvmobile_runtime_get_load_model_progressPtr = _lookup<
    ffi.NativeFunction<ffi.Float Function(rwkvmobile_runtime_t )>>('rwkvmobile_runtime_get_load_model_progress');
late final _rwkvmobile_runtime_get_load_model_progress = _rwkvmobile_runtime_get_load_model_progressPtr.asFunction<double Function(rwkvmobile_runtime_t )>();

int rwkvmobile_runtime_release_model(rwkvmobile_runtime_t runtime,
int model_id,
) {
  return _rwkvmobile_runtime_release_model(runtime,
model_id,
);
}

late final _rwkvmobile_runtime_release_modelPtr = _lookup<
    ffi.NativeFunction<ffi.Int Function(rwkvmobile_runtime_t , ffi.Int )>>('rwkvmobile_runtime_release_model');
late final _rwkvmobile_runtime_release_model = _rwkvmobile_runtime_release_modelPtr.asFunction<int Function(rwkvmobile_runtime_t , int )>();

int rwkvmobile_runtime_eval_logits(rwkvmobile_runtime_t runtime,
int model_id,
ffi.Pointer<ffi.Int> ids,
int ids_len,
ffi.Pointer<ffi.Float> logits,
int logits_len,
) {
  return _rwkvmobile_runtime_eval_logits(runtime,
model_id,
ids,
ids_len,
logits,
logits_len,
);
}

late final _rwkvmobile_runtime_eval_logitsPtr = _lookup<
    ffi.NativeFunction<ffi.Int Function(rwkvmobile_runtime_t , ffi.Int , ffi.Pointer<ffi.Int> , ffi.Int , ffi.Pointer<ffi.Float> , ffi.Int )>>('rwkvmobile_runtime_eval_logits');
late final _rwkvmobile_runtime_eval_logits = _rwkvmobile_runtime_eval_logitsPtr.asFunction<int Function(rwkvmobile_runtime_t , int , ffi.Pointer<ffi.Int> , int , ffi.Pointer<ffi.Float> , int )>();

int rwkvmobile_runtime_eval_chat_with_history_async(rwkvmobile_runtime_t handle,
int model_id,
ffi.Pointer<ffi.Pointer<ffi.Char>> inputs,
int num_inputs,
int max_tokens,
ffi.Pointer<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char> , ffi.Int , ffi.Pointer<ffi.Char> )>> callback,
int enable_reasoning,
int force_reasoning,
int force_lang,
int add_generation_prompt,
) {
  return _rwkvmobile_runtime_eval_chat_with_history_async(handle,
model_id,
inputs,
num_inputs,
max_tokens,
callback,
enable_reasoning,
force_reasoning,
force_lang,
add_generation_prompt,
);
}

late final _rwkvmobile_runtime_eval_chat_with_history_asyncPtr = _lookup<
    ffi.NativeFunction<ffi.Int Function(rwkvmobile_runtime_t , ffi.Int , ffi.Pointer<ffi.Pointer<ffi.Char>> , ffi.Int , ffi.Int , ffi.Pointer<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char> , ffi.Int , ffi.Pointer<ffi.Char> )>> , ffi.Int , ffi.Int , ffi.Int , ffi.Int )>>('rwkvmobile_runtime_eval_chat_with_history_async');
late final _rwkvmobile_runtime_eval_chat_with_history_async = _rwkvmobile_runtime_eval_chat_with_history_asyncPtr.asFunction<int Function(rwkvmobile_runtime_t , int , ffi.Pointer<ffi.Pointer<ffi.Char>> , int , int , ffi.Pointer<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char> , ffi.Int , ffi.Pointer<ffi.Char> )>> , int , int , int , int )>();

int rwkvmobile_runtime_stop_generation(rwkvmobile_runtime_t runtime,
int model_id,
) {
  return _rwkvmobile_runtime_stop_generation(runtime,
model_id,
);
}

late final _rwkvmobile_runtime_stop_generationPtr = _lookup<
    ffi.NativeFunction<ffi.Int Function(rwkvmobile_runtime_t , ffi.Int )>>('rwkvmobile_runtime_stop_generation');
late final _rwkvmobile_runtime_stop_generation = _rwkvmobile_runtime_stop_generationPtr.asFunction<int Function(rwkvmobile_runtime_t , int )>();

int rwkvmobile_runtime_is_generating(rwkvmobile_runtime_t runtime,
int model_id,
) {
  return _rwkvmobile_runtime_is_generating(runtime,
model_id,
);
}
